Upload de index.html para Tzouzt

--- a/Tzouzt/index.html
+++ b/Tzouzt/index.html
@@ -26,7 +26,7 @@
         <h1>Tzouzt</h1>
         <div class="counter" id="dateCounter"></div>
         <div class="photo-grid">
-            <div class="photo-item"><img src="https://lovetoo-ch.github.io/mon-amour/Tzouzt/photo_0.jpg" alt="Photo"></div><div class="photo-item"><img src="https://lovetoo-ch.github.io/mon-amour/Tzouzt/photo_1.jpg" alt="Photo"></div><div class="photo-item"><img src="https://lovetoo-ch.github.io/mon-amour/Tzouzt/photo_2.jpg" alt="Photo"></div>
+            <div class="photo-item"><img src="https://via.placeholder.com/150?text=Pas+de+photo" alt="Photo"></div>
         </div>
         <p class="message">Hhhhhhhh</p>
         <p class="meeting-story">Hhhhhh</p>
