Upload de index.html para MAria_Jose

--- a/MAria_Jose/index.html
+++ b/MAria_Jose/index.html
@@ -24,7 +24,7 @@
         <div class="photo-grid">
             <div class="photo-item"><img src="https://lovetoo-ch.github.io/mon-amour/MAria_Jose/photo_0.jpg" alt="Photo"></div><div class="photo-item"><img src="https://lovetoo-ch.github.io/mon-amour/MAria_Jose/photo_1.jpg" alt="Photo"></div><div class="photo-item"><img src="https://lovetoo-ch.github.io/mon-amour/MAria_Jose/photo_2.jpg" alt="Photo"></div>
         </div>
-        <p class="message">22222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222</p>
+        <p class="message">amor</p>
         <p class="meeting-story">222222222222222</p>
         <div class="music-container"><iframe width="100%" height="315" src="https://www.youtube.com/embed/?autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
         
