--- a/Esthétique_Pães_/index.html
+++ b/Esthétique_Pães_/index.html
@@ -23,7 +23,7 @@
         </style>
     </head>
     <body>
-        <h1>Esthétique Pães </h1>
+        <h1>Esthétique Paes </h1>
         <div class="counter" id="dateCounter"></div>
         <div class="photo-grid">
             <div class="photo-item"><img src="https://lovetoo-ch.github.io/mon-amour/Esthétique Pães /photo0.jpg" alt="Photo"></div><div class="photo-item"><img src="https://lovetoo-ch.github.io/mon-amour/Esthétique Pães /photo1.jpg" alt="Photo"></div><div class="photo-item"><img src="https://lovetoo-ch.github.io/mon-amour/Esthétique Pães /photo2.jpg" alt="Photo"></div>
